gccida/g3/move_for_stack_reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/reg-stack.c:1586:12: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v16) & 0xFFFFFFFB) == 2 ) 
           ^~~~~~~~~~~~
           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/reg-stack.c:1586:32: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( *( &mode_class_0 + v16) & 0xFFFFFFFB) == 2 ) 
       ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/reg-stack.c:1675:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v23.rtwint = ( __int64)regno_note->fld[0]; 
                       ^~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/reg-stack.c:1679:12: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v24) & 0xFFFFFFFB) != 2 ) 
           ^~~~~~~~~~~~
           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/reg-stack.c:1679:32: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( *( &mode_class_0 + v24) & 0xFFFFFFFB) != 2 ) 
       ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/reg-stack.c:1704:12: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v27) & 0xFFFFFFFB) == 2 ) 
           ^~~~~~~~~~~~
           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/reg-stack.c:1704:32: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( *( &mode_class_0 + v27) & 0xFFFFFFFB) == 2 ) 
       ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/reg-stack.c:1868:12: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v16) & 0xFFFFFFFB) == 2 ) 
           ^~~~~~~~~~~~
           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/reg-stack.c:1868:32: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( *( &mode_class_0 + v16) & 0xFFFFFFFB) == 2 ) 
       ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/move_for_stack_reg/src/obj/reg-stack.o] Error 1
